Place selection search fields in dialog title rows
Move searchable selection dialog titles into the content header row and align compact search fields on the right, while preserving standard headers for non-search selection dialogs.

Assisted-by: codex:gpt-5.5